--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,34 @@
 	<artifactId>RiskManagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-
+	
+	<dependencies>
+        <!-- common -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+	<dependency>  
+        	<groupId>org.apache.struts</groupId>  
+        	<artifactId>struts2-core</artifactId>  
+        	<version>2.3.14</version>  
+    	</dependency>  
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+      
+       
+    </dependencies>
+	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
