--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,5 @@ eclipse.preferences.version=1
 encoding//WebContent/pages/addIter.html=gb2312
 encoding//WebContent/pages/addRequirement.html=gb2312
 encoding//WebContent/pages/addRisk.html=gb2312
-encoding//WebContent/pages/login.html=gb2312
+encoding//src/nju/edu/action/AjaxAction.java=UTF-8
 encoding/<project>=gb2312
