--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>RiskManagement</groupId>
 	<artifactId>RiskManagement</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version></version>
 	<packaging>war</packaging>
 	
 	<dependencies>
