--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=group01
 sonar.projectName=RiskManagement
-sonar.projectVersion=
+sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.sources=.
 sonar.login=576cd61fd6c9f9253badca337e7dd729faa549e0
 sonar.language=java
