--- a/pom.xml
+++ b/pom.xml
@@ -5,37 +5,41 @@
 	<artifactId>RiskManagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
+
 	<dependencies>
 		<!-- junit -->
-		<!--<dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.9</version>
 			<scope>test</scope>
-		</dependency>-->
+		</dependency>
+
+		<!-- struts2依赖包 -->
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.3.14</version>
+		</dependency>
 
 		<dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
-		<dependency>  
-            <groupId>org.apache.struts</groupId>  
-            <artifactId>struts2-core</artifactId>  
-            <version>2.3.14</version>  
-        </dependency>  
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
-        </dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 
+<groupId>org.apache.struts</groupId>
 
+<artifactId>struts2-json-plugin</artifactId>
+
+<version>2.3.16</version>
+
+</dependency>
 
 	</dependencies>
-	
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
@@ -68,4 +72,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
