--- a/pom.xml
+++ b/pom.xml
@@ -3,32 +3,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>RiskManagement</groupId>
 	<artifactId>RiskManagement</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>war</packaging>
 	
 	<dependencies>
-		<!-- junit -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.9</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- struts2依赖包 -->
-		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-core</artifactId>
-			<version>2.3.14</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
-
+            		<groupId>javax.servlet</groupId>
+            		<artifactId>javax.servlet-api</artifactId>
+           		<version>3.1.0</version>
+            		<scope>provided</scope>
+       		</dependency>
 
 	</dependencies>
 	
@@ -49,12 +33,16 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<compilerArguments>
+						<extdirs>WebContent/WEB-INF/lib</extdirs>
+					</compilerArguments>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
+					<warName>${project.artifactId}</warName>
 					<warSourceDirectory>WebContent</warSourceDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
